test/parser/error/err_04_const_name_missing.pl0
program p; 
const = 10; 
begin 
end